change h2 to header

--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,7 @@
   .profileText {
     margin-bottom: 20px;
   }
-  .profileText h2 {
+  .profileText header {
     font-size: 2em;
     font-weight: 500;
     margin-bottom: 10px;
