--- a/css/main.css
+++ b/css/main.css
@@ -121,7 +121,7 @@ input[type=text] {
 input[type=email] {
     font-size: .3em;
 }
-input[type=textarea] {
+input[type=text] {
     font-size: .3em;
     
 }
