--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,8 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Special Elite', cursive;
+    /* font-family: 'Special Elite', cursive; */
+    font-family: 'Abril Fatface', cursive;
 }
 #navbar {
     position: fixed;
